[package]
name = "kaudio"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2018"

[features]
default = ["audio_manager"]
audio_manager = ["rtrb"]

[dependencies]
rtrb = {version = "0.1.1", optional = true}


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "audioclient", "audiosessiontypes", "synchapi", "winbase", "minwindef"] }

[dev-dependencies]
hound = "3.4.0"
