[package]
name = "kaudio"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2018"

[features]
default = ["audio_manager", "wav"]
audio_manager = ["rtrb"]
wav = ["hound"]

[dependencies]
rtrb = {version = "0.1.1", optional = true}
hound = {version = "3.4.0", optional = true}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "audioclient", "audiosessiontypes", "synchapi", "winbase", "minwindef"] }