[package]
name = "kaudio"
version = "0.1.0"
authors = ["Ian Kettlewell"]
edition = "2018"

[features]
default = ["wav"]
wav = ["hound"]

[dependencies]
hound = {version = "3.4.0", optional = true}

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.*"
wasm_set_stack_pointer = {path = "../wasm_set_stack_pointer"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "audioclient", "audiosessiontypes", "synchapi", "winbase", "minwindef"] }